--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="header">
@@ -17,8 +18,13 @@
     <div class="gameContainer">
         <div class="game"></div>
     </div>
-    <div class="options">
-        <button>Play</button>
+    <div class="play">
+        <button id="playBtn">Play</button>
     </div>
+    <form action="">
+        <div class="main">
+        </div>
+    </form>
+
 </body>
 </html>
