Add close button to options

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
     </div>
     <div class="footer">
         <button id="playBtn">Play</button>
-    </div>
-
-
-
-    
+    </div>    
     <div class="options">
         <div class="optionsBtns">
+            <div class="gameModeText">Select your game mode:</div>
             <button id="playerBtn">Player vs Player</button>
             <button id="computerBtn">Player vs Computer</button>
+            <button id="closeOptionsBtn">X</button>
         </div>
     </div>
 
