Style game board

--- a/index.html
+++ b/index.html
@@ -16,7 +16,37 @@
         </svg>
     </div>
     <div class="main">
-        <div class="game"></div>
+        <div class="game">
+            <div class="gameBoard">
+                <div class="cell">
+                    <div class="xo">X</div>
+                </div>
+                <div class="cell">
+                    <div class="xo">X</div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell">
+                    <div class="xo">O</div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell">
+                    <div class="xo"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <button id="playBtn">Play</button>
