--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
     <div class="main">
         <div class="game">
             <div class="gameBoard">
-                <div class="cell">
-                    <div class="xo">X</div>
-                </div>
-                <div class="cell">
-                    <div class="xo">X</div>
-                </div>
-                <div class="cell">
+                <div class="cell" data-position="0">
                     <div class="xo"></div>
                 </div>
-                <div class="cell">
-                    <div class="xo">O</div>
-                </div>
-                <div class="cell">
+                <div class="cell" data-position="1">
                     <div class="xo"></div>
                 </div>
-                <div class="cell">
+                <div class="cell" data-position="2">
                     <div class="xo"></div>
                 </div>
-                <div class="cell">
+                <div class="cell" data-position="3">
                     <div class="xo"></div>
                 </div>
-                <div class="cell">
+                <div class="cell" data-position="4">
                     <div class="xo"></div>
                 </div>
-                <div class="cell">
+                <div class="cell" data-position="5">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell" data-position="6">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell" data-position="7">
+                    <div class="xo"></div>
+                </div>
+                <div class="cell" data-position="8">
                     <div class="xo"></div>
                 </div>
             </div>
@@ -51,14 +51,7 @@
     <div class="footer">
         <button id="playBtn">Play</button>
     </div>    
-    <div class="options">
-        <div class="optionsBtns">
-            <div class="gameModeText">Select your game mode:</div>
-            <button id="playerBtn">Player vs Player</button>
-            <button id="computerBtn">Player vs Computer</button>
-            <button id="closeOptionsBtn">X</button>
-        </div>
-    </div>
+
 
 </body>
 </html>
